--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6649,36 +6649,6 @@ th.hide-for-touch {
   th.show-for-print {
     display: table-cell !important; } }
 
-nav {
-  background: #FAFAFA; }
-
-.header {
-  padding: 2rem 0 4rem;
-  background: #008CBA; }
-  .header h1 {
-    text-align: center; }
-
-p.subheader {
-  font-style: italic;
-  color: inherit;
-  margin: 0 0 2rem; }
-
-p.subheader--main {
-  text-align: center; }
-
-.info-block {
-  padding: 1rem;
-  background: rgba(255, 255, 255, 0.2);
-  width: 98%;
-  margin: 0 auto; }
-
-.info-block--schedule {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5); }
-
-.info-block__section {
-  background: #EFEFEF;
-  margin: 1px; }
-
 @font-face {
   font-family: 'merloround_regular';
   src: url("fonts/merlo-roundregular-webfont.eot");
@@ -6695,5 +6665,47 @@ p.subheader--main {
 
 .nav__title h1 {
   color: #008CBA; }
+
+.questions {
+  margin: 0; }
+
+.question {
+  position: relative;
+  list-style: none;
+  margin: 0 0 .5em 0;
+  padding: 1em;
+  border: 1px solid #CCCCCC;
+  border-radius: 0.5em; }
+
+.question_order {
+  position: absolute;
+  right: 1em;
+  width: 4em;
+  height: 1.5rem;
+  background: #008CBA;
+  color: #fff;
+  font-size: .8em; }
+
+.question_order--up {
+  top: 1em; }
+
+.question_order--down {
+  bottom: 1em; }
+
+.btn {
+  border: 1px solid #008CBA; }
+
+.btn-primary {
+  margin-top: 2rem;
+  width: 100%;
+  padding: .8em 0 10px .8em;
+  background-color: #008CBA;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase; }
+
+.btn-primary:hover {
+  background-color: #008CBA; }
 
 /*# sourceMappingURL=app.css.map */
