Add templates that have questions. Questions have polymorphic questionable Quests and Templates. Add drag and drop sort to Template and Answeroptions

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6666,10 +6666,10 @@ th.hide-for-touch {
 .nav__title h1 {
   color: #008CBA; }
 
-.questions {
+.questionables {
   margin: 0; }
 
-.question {
+.questionable {
   position: relative;
   list-style: none;
   margin: 0 0 .5em 0;
@@ -6707,5 +6707,59 @@ th.hide-for-touch {
 
 .btn-primary:hover {
   background-color: #008CBA; }
+
+.sortable-multichoice {
+  display: block;
+  border: 1px solid red; }
+
+/* ==========================================================================
+   Login Form
+   ========================================================================== */
+/*
+| Sizes
+*/
+.form-wrap {
+  text-align: left; }
+
+/*
+| Native Core elements
+*/
+form {
+  display: block;
+  positon: relative; }
+
+input,
+textarea {
+  box-sizing: border-box;
+  color: inherit;
+  font-family: inherit;
+  padding: .8em 0 10px .8em;
+  border: 1px solid #cfcfcf;
+  outline: 0;
+  display: inline-block;
+  margin: 0 0 .8em;
+  padding-right: 2em; }
+
+label {
+  display: inline-block;
+  line-height: 3rem; }
+
+input[type=checkbox] {
+  margin: 0 1rem;
+  width: auto; }
+
+/*
+| Extended Core Elements
+*/
+.errormessage {
+  color: #c72626;
+  margin-bottom: .6em; }
+
+/*
+| Specific Forms
+*/
+/*
+|  checkbox ul
+*/
 
 /*# sourceMappingURL=app.css.map */
