--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,7 +10,7 @@
 @import "partials/users";
 @import "partials/questions";
 @import "partials/buttons";
-
+@import "partials/forms";
 
 // Or selectively include components
 // @import
