--- a/resources/assets/sass/partials/_questions.scss
+++ b/resources/assets/sass/partials/_questions.scss
@@ -1,8 +1,8 @@
-.questions {
+.questionables {
 	margin: 0;
 }
 
-.question {
+.questionable {
 	position: relative;
 	list-style: none;
 	margin: 0 0 .5em 0;
