--- a/resources/assets/sass/partials/_forms.scss
+++ b/resources/assets/sass/partials/_forms.scss
@@ -1,3 +1,8 @@
+.sortable-multichoice {
+  display: block;
+  border: 1px solid red;
+}
+
 /* ==========================================================================
    Login Form
    ========================================================================== */
@@ -29,10 +34,11 @@ textarea {
   display: inline-block;
   margin: 0 0 .8em;
   padding-right: 2em;
-  width: 100%;
+  // width: 100%;
 }
 
 label {
+  display: inline-block;
   line-height: 3rem;
 }
 
@@ -48,8 +54,8 @@ input[type=checkbox] {
 
 .errormessage {
   color: #c72626;
-  font-family: $base-font-family-small;
-  font-size: $base-font-size-small;
+  // font-family: $base-font-family-small;
+  // font-size: $base-font-size-small;
   margin-bottom: .6em;
 }
 
