set up initial CSS styling with foundation. Translate instructions to Dutch

--- a/resources/assets/sass/partials/_typography.scss
+++ b/resources/assets/sass/partials/_typography.scss
@@ -21,6 +21,13 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+
 .nav__title h1 {
   color: $primary-color;
+}
+
+h1 {
+  font-weight: 700;
 }
