--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,7 @@
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -411,7 +412,7 @@ body {
   background: #fff;
   color: #222;
   cursor: auto;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1.5;
@@ -1307,7 +1308,7 @@ select {
       background: #EFEFEF;
       color: #222222;
       display: block;
-      font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+      font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
       font-size: 1rem;
       padding: 1rem; }
       .accordion .accordion-navigation > a:hover, .accordion dd > a:hover {
@@ -1706,7 +1707,7 @@ button, .button {
   border-style: solid;
   border-width: 0;
   cursor: pointer;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -3630,7 +3631,7 @@ kbd {
 
 .label {
   display: inline-block;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
   font-weight: normal;
   line-height: 1;
   margin-bottom: auto;
@@ -4015,7 +4016,7 @@ ul.pagination {
   .pricing-table .title {
     background-color: #333333;
     color: #EEEEEE;
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
     font-size: 1rem;
     font-weight: normal;
     padding: 0.9375rem 1.25rem;
@@ -4023,7 +4024,7 @@ ul.pagination {
   .pricing-table .price {
     background-color: #F6F6F6;
     color: #333333;
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
     font-size: 2rem;
     font-weight: normal;
     padding: 0.9375rem 1.25rem;
@@ -4306,7 +4307,7 @@ ul.pagination {
 
 .side-nav {
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
   list-style-position: outside;
   list-style-type: none;
   margin: 0;
@@ -4327,7 +4328,7 @@ ul.pagination {
         color: #1cc7ff; }
     .side-nav li.active > a:first-child:not(.button) {
       color: #1cc7ff;
-      font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+      font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
       font-weight: normal; }
     .side-nav li.divider {
       border-top: 1px solid;
@@ -4447,7 +4448,7 @@ ul.pagination {
   .sub-nav li {
     color: #999999;
     float: left;
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
     font-size: 0.875rem;
     font-weight: normal;
     margin-left: 1rem;
@@ -4634,7 +4635,7 @@ table {
       display: block;
       background-color: #EFEFEF;
       color: #222222;
-      font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+      font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
       font-size: 1rem;
       padding: 1rem 2rem; }
       .tabs dd > a:hover,
@@ -4946,7 +4947,7 @@ meta.foundation-mq-topbar {
     .top-bar-section ul li > a {
       color: #FFFFFF;
       display: block;
-      font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+      font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
       font-size: 0.8125rem;
       font-weight: normal;
       padding-left: 0.9375rem;
@@ -5486,7 +5487,7 @@ p {
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
   color: #222222;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1.4;
@@ -6649,6 +6650,9 @@ th.hide-for-touch {
   th.show-for-print {
     display: table-cell !important; } }
 
+#content {
+  margin-top: 1rem; }
+
 @font-face {
   font-family: 'merloround_regular';
   src: url("fonts/merlo-roundregular-webfont.eot");
@@ -6665,6 +6669,20 @@ th.hide-for-touch {
 
 .nav__title h1 {
   color: #008CBA; }
+
+h1 {
+  font-weight: 700; }
+
+.edit {
+  color: #cf2a0e;
+  right: 0;
+  margin: 1em 0; }
+
+.handle {
+  background: #fff; }
+
+fieldset > div {
+  display: inline-block; }
 
 .questionables {
   margin: 0; }
@@ -6715,51 +6733,5 @@ th.hide-for-touch {
 /* ==========================================================================
    Login Form
    ========================================================================== */
-/*
-| Sizes
-*/
-.form-wrap {
-  text-align: left; }
-
-/*
-| Native Core elements
-*/
-form {
-  display: block;
-  positon: relative; }
-
-input,
-textarea {
-  box-sizing: border-box;
-  color: inherit;
-  font-family: inherit;
-  padding: .8em 0 10px .8em;
-  border: 1px solid #cfcfcf;
-  outline: 0;
-  display: inline-block;
-  margin: 0 0 .8em;
-  padding-right: 2em; }
-
-label {
-  display: inline-block;
-  line-height: 3rem; }
-
-input[type=checkbox] {
-  margin: 0 1rem;
-  width: auto; }
-
-/*
-| Extended Core Elements
-*/
-.errormessage {
-  color: #c72626;
-  margin-bottom: .6em; }
-
-/*
-| Specific Forms
-*/
-/*
-|  checkbox ul
-*/
 
 /*# sourceMappingURL=app.css.map */
