--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 
 @import "partials/layout";
 @import "partials/typography";
+@import "partials/questdesign";
 @import "partials/users";
 @import "partials/questions";
 @import "partials/buttons";
